# myboto3module

./: README.md  pyproject.toml  requirement.txt  setup.py
src/myyboto3module/: uploader.py
src/myyboto3module.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/osdu_ingestor/: config.py  osdu_utils.py  uploader.py
src/osdu_ingestor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: config.json  config.yaml  gen_config_file.py  gui.py
