[project]
name = "myyboto3module"
version = "0.0.1"
authors = [
  { name="An Nguyen", email="nguyentienan1322@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/annt132222/boto3module"
Issues = "https://github.com/annt132222/boto3module/issues"